--- a/double_iter/CMakeLists.txt
+++ b/double_iter/CMakeLists.txt
@@ -14,3 +14,8 @@ add_executable(${PROJECT_NAME}
 	WIN32
 	${src}
 )
+
+
+set_target_properties( ${PROJECT_NAME}
+       PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE"
+)
